[package]
name = "dokan"
version = "0.3.1+dokan230"
authors = ["DDoSolitary <DDoSolitary@gmail.com>"]
description = "Rust-friendly wrapper for Dokan (user mode file system library for Windows)"
homepage = "https://dokan-dev.github.io"
repository = "https://github.com/dokan-dev/dokan-rust"
documentation = "https://dokan-dev.github.io/dokan-rust-doc/html/dokan/"
keywords = ["dokan", "bindings", "driver", "filesystem"]
categories = ["external-ffi-bindings"]
readme = "README.md"
license = "MIT"
edition = "2021"

[badges]
appveyor = { repository = "Liryna/dokan-rust" }

[dependencies]
bitflags = "2.9"
dokan-sys = { path = "../dokan-sys" }
widestring = "1.2"
winapi = { version = "0.3", features = ["std", "errhandlingapi", "handleapi", "heapapi", "ioapiset", "minwinbase", "minwindef", "ntdef", "ntstatus", "processenv", "processthreadsapi", "sddl", "securitybaseapi", "synchapi", "winbase", "winerror", "winnt"] }

# Optional dependencies for examples
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.41", features = ["full"], optional = true }
axum = { version = "0.7", optional = true }

[dev-dependencies]
clap = "4.5"
ctrlc = "3.4"
lazy_static = "1.5"
parking_lot = "0.12"
regex = "1.11"
# Also add these for examples to use
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
axum = "0.7"

[features]
httpfs = ["dep:reqwest", "dep:serde", "dep:serde_json", "dep:tokio", "dep:axum"]

[[bin]]
name = "httpfs-server"
path = "examples/httpfs/server.rs"
required-features = ["httpfs"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
